# aoc2020

./: .gitignore  Cargo.toml  README.md
elixir/: README.md  d01.exs  d02.exs  d03.exs
src/: d01.rs  d01p1.rs  d01p2.rs  d02.rs  d02p1.rs  d02p2.rs  d03.rs  d03p1.rs  d03p2.rs  d04.rs  d04p1.rs  d04p2.rs  d05.rs  d05p1.rs  d05p2.rs  d06.rs  d06p1.rs  d06p2.rs
