[package]
name = "aoc2020"
version = "0.1.0"
authors = ["Raphaël Thériault <raphael_theriault@outlook.com>"]
edition = "2018"
license = "MIT"

[[bin]]
name = "d01p1"
path = "src/d01p1.rs"

[[bin]]
name = "d01p2"
path = "src/d01p2.rs"

[[bin]]
name = "d02p1"
path = "src/d02p1.rs"

[[bin]]
name = "d02p2"
path = "src/d02p2.rs"

[[bin]]
name = "d03p1"
path = "src/d03p1.rs"

[[bin]]
name = "d03p2"
path = "src/d03p2.rs"

[[bin]]
name = "d04p1"
path = "src/d04p1.rs"

[[bin]]
name = "d04p2"
path = "src/d04p2.rs"
